Improve URL copying and last result retrieval
Refactor URL copy functionality and local storage handling.

--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
       // URLの末尾に結果をくっつける
       const newURL = window.location.origin + window.location.pathname + "?result=" + res.key;
       window.history.pushState({}, '', newURL);
+      localStorage.setItem("lastResult", JSON.stringify(res));
+      saveHistory(res);
       display(res);
     }
 
@@ -322,8 +324,11 @@
       area.style.display = "block";
     }
     function copyURL() {
+      const url = window.location.href;
       navigator.clipboard.writeText(window.location.href).then(() => {
         alert("診断結果のURLをコピーしました！LINEなどで送ってみてください。");
+      }).catch(err => {
+        console.error("コピー失敗: ", err);
       });
     }
 
@@ -335,7 +340,11 @@
         display({ display: keys, key: resultParam });
       } else {
         const last = localStorage.getItem("lastResult");
-        if(last) { display(JSON.parse(last)); } else { showQuestion(); }
+        if(last) { 
+          display(JSON.parse(last)); 
+        } else { 
+        showQuestion(); 
+        }
       }
     };
   </script>
