Add share diagnosis results section
Added a section to share diagnosis results with friends.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     <div id="historyList" style="display:none; margin-top:10px; font-size:0.8rem;"></div>
     <h3 style="margin-top:30px; color:var(--main); border-bottom:1px solid #eee;">おすすめの薬膳</h3>
     <div id="yakuzennImages"></div>
+    <div style="margin-top: 20px; padding: 15px; background: #fff; border-radius: 10px; border: 1px dashed var(--accent);">
+      <p style="font-size: 0.9rem; margin-bottom: 8px;">✨ 診断結果を友達にシェアする</p>
+      <button class="primary" onclick="copyURL()">結果のリンクをコピーする</button>
+      <p style="font-size: 0.7rem; color: #888; margin-top: 5px;">※コピーしたURLをLINEやSNSに貼り付けて送れます</p>
+    </div>
     <h3 style="margin-top:20px; color:var(--main); border-bottom:1px solid #eee;">おすすめのツボ</h3>
     <div id="tsuboImages"></div>
     <h3 style="margin-top:20px; color:var(--main); border-bottom:1px solid #eee;">おすすめのヨガ</h3>
