Update questionnaire text in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       { text: "暑がりでのぼせやすいですか？", type: "netsu", reverse: true },
       { text: "夏でも冷たい飲み物は苦手ですか？", type: "kan" },
       { text: "少し動くと疲れて息切れしますか？", type: "kikyo" },
-      { text: "風邪を引きやすいですか？", type: "kikyo" },
+      { text: "あまりたくさん食べられない方ですか？", type: "kikyo" },
       { text: "声が小さく弱々しいですか？", type: "kikyo" },
       { text: "ため息がよく出ますか？", type: "kitai" },
       { text: "胸やお腹が張る感じがありますか？", type: "kitai" },
@@ -100,7 +100,7 @@
       { text: "目の乾燥を感じますか？", type: "kekkyo" },
       { text: "あざができやすいですか？", type: "oketsu" },
       { text: "肩こり・頭痛が多いですか？", type: "oketsu" },
-      { text: "生理不順や生理痛がありますか？", type: "oketsu" },
+      { text: "生理不順や生理痛がありますか？（男性の方や、生理のない方はどちらでもないを選択してください）", type: "oketsu" },
       { text: "むくみやすいですか？", type: "suitai" },
       { text: "下痢や軟便が多いですか？", type: "suitai" },
       { text: "身体に水音を感じることがありますか？", type: "suitai" }
