--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       { text: "生理不順や生理痛がありますか？（男性の方や、生理のない方はどちらでもないを選択してください）", type: "oketsu" },
       { text: "むくみやすいですか？", type: "suitai" },
       { text: "下痢や軟便が多いですか？", type: "suitai" },
-      { text: "身体に水音を感じることがありますか？", type: "suitai" }
+      { text: "鏡で舌を見たとき、周りにギザギザした歯型がついていたり、白っぽく厚い苔があったりしますか？", type: "suitai" }
     ];
 
     // 2. 体質詳細データ
