--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>和らぎ体質診断</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root { --main: #b35c5c; --bg: #fdf6f0; --accent: #f48f8f; --white: #ffffff; }
@@ -49,6 +50,9 @@
     <div id="badgeArea"></div>
     <div id="summaryDesc" class="type-desc-box"></div>
     <p style="font-size: 0.7rem; color: #aaa;">※バッジをタップで詳細解説</p>
+    <div style="width: 100%; max-width: 300px; margin: 20px auto;">
+      <canvas id="myRadarChart"></canvas>
+    </div>
     <button onclick="toggleHistory()">履歴表示</button>
     <button onclick="startDiagnosis()">最初から</button>
     <div id="historyList" style="display:none; margin-top:10px; font-size:0.8rem;"></div>
@@ -306,6 +310,39 @@
       const pArea = document.getElementById("yogaPlaceholder"); pArea.innerHTML = "";
       (yogaNames[key] || []).forEach(id => {
         pArea.innerHTML += `<figure><img src="images/yoga/${id}.jpg" onerror="this.style.display='none'"><figcaption><a href="yoga/${id}.html">${yogaDisplayNames[id] || id}</a></figcaption></figure>`;
+      });
+      // グラフを描画する
+      const ctx = document.getElementById('myRadarChart').getContext('2d');
+  
+      // スコアがマイナスにならないように調整（最小値を0にするなど）
+      const chartData = [
+        Math.max(0, points.kikyo + points.kitai + points.kigyaku), // 気の合計
+        Math.max(0, points.kekkyo + points.oketsu),               // 血の合計
+        Math.max(0, points.suitai)                                // 水の合計
+      ];
+
+      new Chart(ctx, {
+        type: 'radar',
+        data: {
+          labels: ['気 (エネルギー)', '血 (めぐり)', '水 (水分代謝)'],
+          datasets: [{
+          label: 'あなたの体質バランス',
+          data: chartData,
+          backgroundColor: 'rgba(179, 92, 92, 0.2)', // --mainの色(b35c5c)
+          borderColor: '#b35c5c',
+          borderWidth: 2,
+          pointBackgroundColor: '#b35c5c'
+          }]
+        },
+        options: {
+          scales: {
+            r: {
+              min: 0,
+              suggestedMax: 10, // 質問数に応じて調整してください
+              ticks: { stepSize: 2, display: false } // 目盛り数字を消すとスッキリします
+            }
+          }
+        }
       });
     }
 
