--- a/index.html
+++ b/index.html
@@ -316,11 +316,10 @@
   
       // スコアがマイナスにならないように調整（最小値を0にするなど）
       const chartData = [
-        Math.max(0, points.kikyo + points.kitai + points.kigyaku), // 気の合計
-        Math.max(0, points.kekkyo + points.oketsu),               // 血の合計
-        Math.max(0, points.suitai)                                // 水の合計
-      ];
-
+        Math.max(0, 10 - (points.kikyo + points.kitai + points.kigyaku)), // 気の充実度
+        Math.max(0, 10 - (points.kekkyo + points.oketsu)),               // 血の充実度
+        Math.max(0, 10 - points.suitai)
+      ];  
       new Chart(ctx, {
         type: 'radar',
         data: {
