Refactor yoga pose names for consistency
Updated yoga pose names for consistency and clarity.

--- a/index.html
+++ b/index.html
@@ -178,38 +178,38 @@
     const yogaNames = {
       "kyo_kan_kikyo": ["sun_salutation", "mountain_pose", "tree_pose"],
       "kyo_kan_kitai": ["twist_pose", "cat_pose", "camel_pose"],
-      "kyo_kan_kigyaku": ["plow_pose", "rabbit_pose", "cooldown_pose"],
+      "kyo_kan_kigyaku": ["plow_pose", "rabbit_pose", "cool_down_pose"],
       "kyo_kan_kekkyo": ["mountain_pose", "triangle_pose", "balance_pose"],
-      "kyo_kan_oketsu": ["twist_pose", "shoulder_blade_pose", "pelvis_pose"],
-      "kyo_kan_suitai": ["tree_pose", "balance_pose", "ankle_pose"],
+      "kyo_kan_oketsu": ["twist_pose", "shoulder_blade_moe", "pelvis_move"],
+      "kyo_kan_suitai": ["tree_pose", "balance_pose", "ankle_move"],
       "kyo_netsu_kikyo": ["moon_pose", "relax_pose", "breathing"],
-      "kyo_netsu_kitai": ["fish_pose", "camel_pose", "chest_open_pose"],
-      "kyo_netsu_kigyaku": ["plow_pose", "cooldown_pose", "meditation"],
+      "kyo_netsu_kitai": ["fish_pose", "camel_pose", "chest_opening_pose"],
+      "kyo_netsu_kigyaku": ["plow_pose", "cool_down_pose", "meditation"],
       "kyo_netsu_kekkyo": ["moon_pose", "balance_pose", "relax_pose"],
-      "kyo_netsu_oketsu": ["twist_pose", "shoulder_blade_pose", "pelvis_pose"],
-      "kyo_netsu_suitai": ["tree_pose", "ankle_pose", "cooldown_pose"],
+      "kyo_netsu_oketsu": ["twist_pose", "shoulder_blade_moe", "pelvis_move"],
+      "kyo_netsu_suitai": ["tree_pose", "ankle_move", "cool_down_pose"],
       "jitsu_kan_kikyo": ["sun_salutation", "warrior_pose", "mountain_pose"],
       "jitsu_kan_kitai": ["twist_pose", "cat_pose", "camel_pose"],
-      "jitsu_kan_kigyaku": ["plow_pose", "rabbit_pose", "cooldown_pose"],
+      "jitsu_kan_kigyaku": ["plow_pose", "rabbit_pose", "cool_down_pose"],
       "jitsu_kan_kekkyo": ["mountain_pose", "triangle_pose", "balance_pose"],
-      "jitsu_kan_oketsu": ["twist_pose", "shoulder_blade_pose", "pelvis_pose"],
-      "jitsu_kan_suitai": ["tree_pose", "balance_pose", "ankle_pose"],
+      "jitsu_kan_oketsu": ["twist_pose", "shoulder_blade_moe", "pelvis_move"],
+      "jitsu_kan_suitai": ["tree_pose", "balance_pose", "ankle_move"],
       "jitsu_netsu_kikyo": ["moon_pose", "relax_pose", "breathing"],
-      "jitsu_netsu_kitai": ["fish_pose", "camel_pose", "chest_open_pose"],
-      "jitsu_netsu_kigyaku": ["plow_pose", "cooldown_pose", "meditation"],
+      "jitsu_netsu_kitai": ["fish_pose", "camel_pose", "chest_opening_pose"],
+      "jitsu_netsu_kigyaku": ["plow_pose", "cool_down_pose", "meditation"],
       "jitsu_netsu_kekkyo": ["moon_pose", "balance_pose", "relax_pose"],
-      "jitsu_netsu_oketsu": ["twist_pose", "shoulder_blade_pose", "pelvis_pose"],
-      "jitsu_netsu_suitai": ["tree_pose", "ankle_pose", "cooldown_pose"]
+      "jitsu_netsu_oketsu": ["twist_pose", "shoulder_blade_moe", "pelvis_move"],
+      "jitsu_netsu_suitai": ["tree_pose", "ankle_move", "cool_down_pose"]
     };
 
     const yogaDisplayNames = {
       "sun_salutation": "太陽礼拝", "mountain_pose": "山のポーズ", "tree_pose": "木のポーズ",
       "twist_pose": "ねじりのポーズ", "cat_pose": "猫のポーズ", "camel_pose": "ラクダのポーズ",
-      "plow_pose": "鋤のポーズ", "rabbit_pose": "うさぎのポーズ", "cooldown_pose": "クールダウンのポーズ",
-      "triangle_pose": "三角のポーズ", "balance_pose": "バランスポーズ", "shoulder_blade_pose": "肩甲骨を動かすポーズ",
-      "pelvis_pose": "骨盤を動かすポーズ", "standing_tree_pose":"立木のポーズ", "ankle_pose": "足首を動かすポーズ",
+      "plow_pose": "鋤のポーズ", "rabbit_pose": "うさぎのポーズ", "cool_down_pose": "クールダウンのポーズ",
+      "triangle_pose": "三角のポーズ", "balance_pose": "バランスポーズ", "shoulder_blade_moe": "肩甲骨を動かすポーズ",
+      "pelvis_move": "骨盤を動かすポーズ", "standing_tree_pose":"立木のポーズ", "ankle_move": "足首を動かすポーズ",
       "moon_pose": "月のポーズ", "relax_pose": "リラックスポーズ", "breathing": "呼吸法",
-      "fish_pose": "魚のポーズ", "chest_open_pose": "胸を開くポーズ", "meditation": "瞑想", "warrior_pose": "戦士のポーズ"
+      "fish_pose": "魚のポーズ", "chest_opening_pose": "胸を開くポーズ", "meditation": "瞑想", "warrior_pose": "戦士のポーズ"
     };
 
     let points = { kikyo: 0, kitai: 0, kigyaku: 0, kekkyo: 0, oketsu: 0, suitai: 0, kyo: 0, jitsu: 0, kan: 0, netsu: 0 };
